--- a/nt2-ejercicio1/index.html
+++ b/nt2-ejercicio1/index.html
@@ -43,7 +43,8 @@
             personas:
                 [
                     { nombre: 'Daniel', apellido: 'Sánchez', dni: 20442873, correo: 'danielsanchez68@hotmail.com' },
-                    //Agregar aquí nombre, apellido, dni y correo en formato objeto 
+                    //Agregar aquí nombre, apellido, dni y correo en formato objeto
+                    { nombre: 'Ayelén', apellido: 'Centurión', dni: 35380400, correo: 'ayecenturion23@gmail.com' }, 
                 ]
         },
         computed: {
